--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </head>
   <body>
     <header>
-      <img
+      <!-- <img
         src="https://dka575ofm4ao0.cloudfront.net/pages-transactional_logos/retina/148845/Logo_Logotype_White_BG_2x.png"
         alt="Logo"
         class="header-logo"
@@ -177,7 +177,7 @@
           alt="Logo"
           class="header-logo"
         />
-      </div>
+      </div> -->
       Custom HTML InApp Templates
       <button class="toggle-theme" id="toggleThemeBtn">Toggle Theme</button>
     </header>
