--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         />
       </div> -->
       Custom HTML InApp Templates
-      <!-- <button class="toggle-theme" id="toggleThemeBtn">Toggle Theme</button> -->
+      <button class="toggle-theme" id="toggleThemeBtn">Toggle Theme</button>
     </header>
 
     <div id="container"></div>
